[tool.poetry]
name = "bot-de-discord"
version = "0.1.0"
description = ""
authors = ["badbonsim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
easy-pil = "^0.1.6"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
